# gst-completion

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: README.md  gstreamer.rs  main.rs
