[package]
name = "gstex"
version = "0.1.0"
authors = ["Vikram Fugro <vikram.fugro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer" }
lazy_static = "1.4.0"
nom = "6.2.1"
shell_completion = { git = "https://github.com/JoshMcguigan/shell_completion", package = "shell_completion" }

[[bin]]
name = "_gst_completion"
path = "src/main.rs"
