[package]
name = "gst-completion"
version = "0.1.0"
authors = ["Vikram Fugro <vikram.fugro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git" } 
lazy_static = "1.4.0"
nom = "7.1.1"
shell_completion = { git = "https://github.com/JoshMcguigan/shell_completion.git" } 

[[bin]]
name = "_gst_completion"
path = "src/main.rs"
